# rustysg

./: Cargo.toml  README.md  template.html
.github/workflows/: linux.yaml
resources/: example.html  template_base.html
src/: main.rs  parser.rs  template.rs
src/template/: context.rs  engine.rs  handlebars_engine.rs
tests/: yaml-test-nodate.html  yaml-test.html
