[package]
name = "rustysg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.28", features = ["derive"] }
handlebars = "6.3.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_yml = "0.0.12"
